# robotis_mini

./: .gitmodules
robotis_mini_model/: package.xml
robotis_mini_model/launch/: display.launch
robotis_mini_model/meshes/: models_list.txt
robotis_mini_model/rviz/: robotis_mini.rviz
robotis_mini_model/urdf/: arm.urdf.xacro  components.urdf.xacro  left_hand.urdf.xacro  leg.urdf.xacro  right_hand.urdf.xacro  robotis_mini.urdf.xacro  torso.urdf.xacro
robotis_mini_ros/: CMakeLists.txt  package.xml
robotis_mini_ros/launch/: control.launch  gazebo.launch  real_display.launch
robotis_mini_ros/robotis_mini_control/: CMakeLists.txt  README.md  package.xml  setup.py
robotis_mini_ros/robotis_mini_control/config/: robotis_mini_control.yaml
robotis_mini_ros/robotis_mini_control/launch/: control.launch  poppy_joint_state_publisher.launch  robotis_mini_control.launch~  walker_real_robot.launch
robotis_mini_ros/robotis_mini_control/scripts/: walker.py  walker_demo.py  walker_learner.py
robotis_mini_ros/robotis_mini_description/: CMakeLists.txt  README.md  package.xml
robotis_mini_ros/robotis_mini_description/config/: cyclops_cam.yaml  robotis_mini_control.yaml
robotis_mini_ros/robotis_mini_description/launch/: control.launch  cyclops_cam.launch  display.launch  display.launch~  gazebo.launch  mockup_display.launch  poppy.launch  poppy_joint_state_publisher.launch  real_display.launch
robotis_mini_ros/robotis_mini_description/meshes/: DMB-B02(W)_s.stl  DMF-B01(W)_s.stl  DMF-B03(W)_s.stl  DMF-B04(W)_s.stl  DMF-B05(W)_s.stl  DMF-B06(W)_s.stl  DMF-B07(GR)_s.stl  DMF-F01(W)_s.stl  SPD-3B3(W)_s.dae  SPD-3B3(W)_s.stl  SPD-3B5(W)_s.dae  SPD-3B5(W)_s.stl  SPD-3B7(W)_s.dae  SPD-3B7(W)_s.stl  SPD-4B5(W)_s.dae  SPD-4B5(W)_s.stl  SPD-7V4(W)_s.dae  SPD-7V4(W)_s.stl  SPL-2B2(W)_s.stl  SPO-5(GR)_s.dae  SPO-5(GR)_s.stl  SPU-5(W)_s.stl
robotis_mini_ros/robotis_mini_description/rviz/: robotis_mini.rviz
robotis_mini_ros/robotis_mini_description/src/: poppy_node.py
robotis_mini_ros/robotis_mini_description/urdf/: arm.urdf.xacro  base.urdf.xacro  body.urdf.xacro  common.urdf.xacro  hand.urdf.xacro  leg.urdf.xacro  robotis_mini.urdf.xacro  servo.urdf.xacro
robotis_mini_ros/robotis_mini_gazebo/: CMakeLists.txt  README.md  package.xml  setup.py
robotis_mini_ros/robotis_mini_gazebo/launch/: gazebo.launch  gazebo_and_control.launch  gazebo_walker.launch  robotis_mini_gazebo.launch
robotis_mini_ros/robotis_mini_gazebo/scripts/: setpos.sh  walker.py  walker_demo.py
robotis_mini_ros/robotis_mini_gazebo/src/robotis_mini_gazebo/: robotis_mini.py
robotis_mini_ros/robotis_mini_gazebo/worlds/: empty.world
robotis_mini_ros/rviz/: robotis_mini.rviz
robotis_mini_ros/urdf/: arm.urdf.xacro  components.urdf.xacro  hand.urdf.xacro  left_hand.urdf.xacro  leg.urdf.xacro  right_hand.urdf.xacro  robotis_mini.urdf  robotis_mini.urdf.xacro  torso.urdf.xacro
