<?xml version="1.0"?>
<package>
  <name>robotis_mini_control</name>
  <version>0.0.0</version>
  <description>The robotis_mini_control package</description>

  <maintainer email="rmartinmar@gmail.com">Roberto Martín-Martín</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>effort_controllers</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>effort_controllers</run_depend>

</package>
