<package>
  <name>robotis_mini_description</name>
  <version>1.0.0</version>
  <description>
  This package contains a URDF model and launch files for the Robotis Mini robot.
  </description>
  
  <license>MIT</license>
  <author>Roberto Martín-Martín</author>
  <maintainer email="rmartinmar@gmail.com">Roberto Martín-Martín</maintainer>
  <url>http://wiki.ros.org/todo</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>robotis_mini_control</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robotis_mini_control</run_depend>

</package>
